<resources>
    <string name="app_name">FADAwesomeDesign</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edit">edit</string>
    <string name="create">Create Picture</string>
    <string name="myquotes">My Pictures</string>
    <string name="fad_awesome_design">FAD Awesome Design</string>
    <string name="fad_awesome_desig">FAD Awesome Design</string>
    <string name="quit">Quit</string>
    <string name="share">Share</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_my_pictures">MyPicturesActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="cretae_pictures">Create Pictures</string>
    <string name="saveorshare">saveorshare</string>
    <string name="quotes">Quotes</string>
    <string name="background">Background</string>
    <string name="font">Font</string>
    <string name="fontcolor">FontColor</string>
    <string name="shadow">Shadow</string>
    <string name="overlay">Overlay</string>
</resources>
