<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/create"
            android:icon="@drawable/editimage"
            android:title="@string/create" />
        <item
            android:id="@+id/myquotes"
            android:icon="@drawable/allpictures"
            android:title="@string/myquotes" />
    </group>

    <item android:title="@string/fad_awesome_design">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_quit"
                android:icon="@drawable/uit"
                android:title="@string/quit" />
        </menu>
    </item>

</menu>
